--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
 Custom Global Styles
 ===============
 */
+@import url('https://use.fontawesome.com/releases/v5.8.1/css/all.css');
 
 .homepage-sidebar-margin {
   margin-top: 38px;
